Removes the need for js in menu & fixes icon alignments (#409)

--- a/source/sass/component/_nav.scss
+++ b/source/sass/component/_nav.scss
@@ -5,10 +5,13 @@
   .c-nav__item {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 
   .c-nav__link  {
       display: flex;
+      flex-direction: row;
+      align-items: center;
   }
 }
 
@@ -174,7 +177,6 @@
   }
 
   .c-nav__link {
-      display: flex;
       align-items: center;
       padding-top: $base;
       padding-bottom: $base;
@@ -252,13 +254,22 @@
 }
 
 .c-nav--horizontal {
-
   align-items: flex-start;
 
   .c-nav__item .c-nav__link:hover:after,
   .c-nav__item.is-open .c-nav__link:after,
   .c-nav__item.is-current .c-nav__link:after {
     display: block; 
+  }
+
+  /* Prevent outside viewport */ 
+  .c-nav__item:last-child ul.c-nav.c-nav--depth-1 {
+    right: 0;
+    /* Arrow adjust */ 
+    &:after {
+      left: auto;
+      right: calc(#{$base} * 2);
+    }
   }
 
   .c-nav__link {
@@ -278,16 +289,15 @@
     }
   }
 
-  .c-nav__item {
-    display: block;
-  }
-
   /* Dropdown Menu */ 
   ul.c-nav.c-nav--depth-1 {
+    flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 0;
     position: absolute;
     bottom: 0; 
     background: $color-white;
-    width: calc(#{$base} * 32);
+    width: auto;
     min-width: calc(#{$base} * 15);
     background-color: $color-white;
     border-radius: $border-radius-sm;
@@ -310,7 +320,6 @@
     }
 
     .c-nav__link {
-      display: inline-block;
       padding: calc(#{$base} * 1.5) calc(#{$base} * 2);
       text-decoration: none;
       background-color: $color-white;
@@ -318,6 +327,7 @@
       z-index: $level-9;
       white-space: normal;
       color: $color-black;
+      white-space: nowrap;
   
       &:after { 
         bottom: calc(#{$base} * 1.5); 
@@ -326,6 +336,7 @@
 
     .c-nav__item {
       overflow: hidden;
+      width: 100%;
     }
 
     .c-nav__item + .c-nav__item {
@@ -349,13 +360,8 @@
   }
 
   .c-nav__item:hover ul.c-nav.c-nav--depth-1 {
-    display: block;
+    display: flex;
   }
-
-  .c-nav.c-nav--depth-1.c-nav--calculated .c-nav__link {
-    display: block;
-  }
-
 }
 
 
